--- a/style.css
+++ b/style.css
@@ -1,109 +1,242 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  box-sizing: border-box;
+html, body{
+  background-color: #FFFFFF;
+  font-family: 'Roboto', sans-serif;
 }
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+.main{
+  width: 100%;
+  display: block;
+  background: #ababab;
 }
-
-.calendar {
-  width: 600px;
-  margin: 50px;
+.content-wrap{
+  width: 100%;
+  margin:0 auto;
+  border: 4px solid rgba(161, 161, 161, 0.5); 
+  border-radius: 20px;
+  overflow: hidden;
+  background: #FFFFFF;
 }
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.content-left{
+  background: #0b0809;
+  color:#FFFFFF;
+  float: left;
+  width: 100%;
+  padding: 30px;
 }
-
-.year-month {
-  font-size: 35px;
-}
-
-.nav {
-  display: flex;
-  border: 1px solid #333333;
-  border-radius: 5px;
-}
-
-.nav-btn {
-  width: 28px;
-  height: 30px;
-  border: none;
-  font-size: 16px;
-  line-height: 34px;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.go-today {
-  width: 75px;
-  border-left: 1px solid #333333;
-  border-right: 1px solid #333333;
-}
-
-.days {
-  display: flex;
-  margin: 25px 0 10px;
-}
-
-.day {
-  width: calc(100% / 7);
+.main-wrap{
   text-align: center;
+  padding: 20px 0 0 0;
 }
-
-.dates {
-  display: flex;
-  flex-flow: row wrap;
-  height: 500px;
-  border-top: 1px solid #333333;
-  border-right: 1px solid #333333;
+.main-day{
+  font-size: 30px;
+  font-weight: bold;
 }
-
-.date {
-  width: calc(100% / 7);
-  padding: 15px;
-  text-align: right;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #333333;
+.main-date{
+  font-size: 120px;
+  font-weight: bold;
+  margin: 20px 0;
 }
-
-.day:nth-child(7n + 1),
-.date:nth-child(7n + 1) {
-  color: #d13e3e;
+.todo-wrap{
+  padding: 0 0 0 40px;
 }
-
-.day:nth-child(7n),
-.date:nth-child(7n) {
-  color: #396ee2;
+.todo-title{
+  font-size: 20px;
+  font-weight: 100;
+  margin: 0 0 10px 0;
 }
-
-.other {
-  opacity: 0.3;
+.input-box{
+  width: 50%;
+  margin-right: 20px;
+  height: auto; 
+  background: #0b0809;
+  color: #ddaf35;
+  line-height : normal;
+  padding: .8em .5em 0 0; 
+  font-family: inherit;
+  border: 0; 
+  border-bottom: 1px dashed #FFFFFF;; 
+  border-radius: 0; 
+  outline-style: none; 
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
 }
-
-.today {
-  position: relative;
+.input-data{
+  cursor: pointer;
+  font-size: 10px;
+  padding: 10px;
+  margin: 10px 0 10px 0;
+  background: #FFFFFF;
+  border: none;
+  color: #0b0809;
+  border-radius: 10px;
+}
+.input-data:hover{
+  background: #ffffff;
+  color: #0b0809;
+}
+.input-list > div{
+  font-size: 10px;
+  width: 60%;
+  float: left;
+  color: #2ebaf1;
+}
+.input-list > .checked{
+  color: #FFFFFF;
+  text-decoration:line-through
+}
+.del-data{
+  display: block;
+  color: #ddaf35;
+  float: left;
+  width: 10%;
+  cursor: pointer;
+  font-size: 10px;
+  padding: 10px;
+  background: #0b0809;
+  border: none;
+  border-radius: 10px;
+}
+.content-right{
+  float: left;
+  width: 90%;
+  padding: 10px;
+}
+.sun{
+  color:#ef3333;
+}
+.sat{
+  color:#2107e0;
+}
+.content-right table tr td{
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.active{
+  background: #0b0809;
+  border-radius: 50%;
   color: #ffffff;
 }
 
-.today::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: -1;
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-color: #ff0000;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
+@media(min-width: 850px){
+  .main{
+    display: flex;
+    align-items: center;
+    justify-content:  center;
+    width: 100vw;
+    height: 100vh;
+    background: #ababab;
+  }
+  .content-wrap{
+    width: 800px;
+    height: 600px;
+    margin:0 auto;
+    border: 4px solid rgba(161, 161, 161, 0.5); 
+    border-radius: 20px;
+    overflow: hidden;
+    background: #ffffff;
+  }
+  .content-left{
+    background: #0b0809;
+    color:#ffffff;
+    float: left;
+    width: 360px;
+    height: 600px;
+    padding: 90px 20px 20px 0;
+  }
+  .main-wrap{
+    text-align: center;
+    margin: 20px 0 0 0;
+  }
+  .main-day{
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .main-date{
+    font-size: 120px;
+    font-weight: bold;
+    margin: 20px 0;
+  }
+  .todo-wrap{
+    padding: 0 0 0 40px;
+  }
+  .todo-title{
+    font-size: 20px;
+    font-weight: 100;
+    margin: 0 0 10px 0;
+  }
+  .input-box{
+    width: 70%;
+    height: auto; 
+    background: #0b0809;
+    color: #ffffff;
+    line-height : normal;
+    padding: .8em .5em 0 0; 
+    font-family: inherit;
+    border: 0; 
+    border-bottom: 1px dashed #ffffff;; 
+    border-radius: 0; 
+    outline-style: none; 
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none;
+  }
+  .input-data{
+    cursor: pointer;
+    font-size: 10px;
+    padding: 10px;
+    margin: 20px 0 30px 0;
+    background: #ffffff;
+    border: none;
+    color: #0b0809;
+    border-radius: 10px;
+  }
+  .input-data:hover{
+    background: #ffffff;
+    color: #0b0809;
+  }
+  .input-list > div{
+    font-size: 10px;
+    width: 60%;
+    float: left;
+    color: #2ebaf1;
+  }
+  .del-data{
+    display: block;
+    color: #2ebaf1;
+    float: left;
+    width: 10%;
+    cursor: pointer;
+    font-size: 10px;
+    padding: 10px;
+    background: #0b0809;
+    border: none;
+    border-radius: 10px;
+  }
+  .content-right{
+    float: left;
+    width: 360px;
+    height: 600px;
+    padding: 100px 20px 20px 20px;
+  }
+  .sun{
+    color:#ef3333;
+  }
+  .sat{
+    color:#2107e0;
+  }
+  .content-right table tr td{
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .active{
+    background: #0b0809;
+    border-radius: 50%;
+    color: #ffffff;
+  }
 }
