right block 검은색으로

--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ body {
 }
 
 .content-last {
-  background: #ffffff;
+  background: #0b0809;
   color: #ffffff;
   float: right;
   width: 100%;
@@ -33,7 +33,7 @@ body {
 }
 
 .content-last {
-  background: #ffffff;
+  background: #0b0809;
   color: #ffffff;
   float: right;
   width: 360px;
