--- a/styles/index.css
+++ b/styles/index.css
@@ -36,7 +36,7 @@ body {
   background: #0b0809;
   color: #ffffff;
   float: right;
-  width: 360px;
+  width: 400px;
   height: 600px;
   padding: 90px 20px 20px 0;
 }
@@ -97,7 +97,7 @@ body {
   font-size: 10px;
   width: 60%;
   float: left;
-  color: #2ebaf1;
+  color: #dd1515;
   position: relative;
 }
 .input-list > .checked {
@@ -150,7 +150,7 @@ body {
     background: #ababab;
   }
   .content-wrap {
-    width: 1180px;
+    width: 1078px;
     height: 600px;
     margin: 0 auto;
     border: 4px solid rgba(161, 161, 161, 0.5);
@@ -159,10 +159,24 @@ body {
     background: #ffffff;
   }
   .content-left {
-    background: #0b0809;
+    background-color: black;
+    background-image: radial-gradient(
+        white,
+        rgba(255, 255, 255, 0.2) 2px,
+        transparent 40px
+      ),
+      radial-gradient(white, rgba(255, 255, 255, 0.15) 1px, transparent 30px),
+      radial-gradient(white, rgba(255, 255, 255, 0.1) 2px, transparent 40px),
+      radial-gradient(
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.1) 2px,
+        transparent 30px
+      );
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
     color: #ffffff;
     float: left;
-    width: 360px;
+    width: 270px;
     height: 600px;
     padding: 90px 20px 20px 0;
   }
@@ -229,7 +243,7 @@ body {
   }
   .del-data {
     display: block;
-    color: #2ebaf1;
+    color: #d30f30;
     float: left;
     width: 10%;
     cursor: pointer;
@@ -241,7 +255,7 @@ body {
   }
   .content-right {
     float: left;
-    width: 360px;
+    width: 400px;
     height: 600px;
     padding: 100px 20px 20px 20px;
   }
